RESOLVED FIXED113730
[CSS Exclusions] Zoom causes shape-inside to fail when shape-padding is specified
https://bugs.webkit.org/show_bug.cgi?id=113730
Summary [CSS Exclusions] Zoom causes shape-inside to fail when shape-padding is speci...
Hans Muller
Reported 2013-04-01 16:18:58 PDT
Created attachment 196035 [details] Test case. In the attached test case, the layout fails when the page is zoomed.
Attachments
Test case. (1.53 KB, text/html)
2013-04-01 16:18 PDT, Hans Muller
no flags
Simplified test case. (1.21 KB, text/html)
2013-04-02 10:59 PDT, Hans Muller
no flags
Simplified test case screenshot. (16.20 KB, image/png)
2013-04-02 11:00 PDT, Hans Muller
no flags
Patch (4.12 KB, patch)
2013-04-09 14:13 PDT, Hans Muller
no flags
Patch (6.00 KB, patch)
2013-04-10 11:49 PDT, Hans Muller
no flags
Hans Muller
Comment 1 2013-04-02 10:59:05 PDT
Created attachment 196181 [details] Simplified test case.
Hans Muller
Comment 2 2013-04-02 11:00:25 PDT
Created attachment 196183 [details] Simplified test case screenshot.
Hans Muller
Comment 3 2013-04-09 14:13:55 PDT
Dirk Schulze
Comment 4 2013-04-10 09:51:37 PDT
Comment on attachment 197172 [details] Patch Can you add a changelog please? Makes it easier to understand.
Hans Muller
Comment 5 2013-04-10 11:49:14 PDT
Created attachment 197351 [details] Patch Added the ChangeLog changes.
WebKit Commit Bot
Comment 6 2013-04-10 14:21:11 PDT
Comment on attachment 197351 [details] Patch Clearing flags on attachment: 197351 Committed r148139: <http://trac.webkit.org/changeset/148139>
WebKit Commit Bot
Comment 7 2013-04-10 14:21:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.