[CSS Exclusions] Zoom causes shape-inside to fail when shape-padding is specified https://bugs.webkit.org/show_bug.cgi?id=113730

Reviewed by Dirk Schulze.

Source/WebCore:

Snap computed margin and polygon boundaries to the LayoutUnit grid to ensure
that they fall within the shape's LayoutUnit bounding box.

Test: fast/exclusions/shape-inside/shape-inside-polygon-zoom.html

* rendering/ExclusionPolygon.cpp:
(WebCore::snapVerticesToLayoutUnitGrid): Convert the FloatPoint coordinates to LayoutUnits and then back to floats.
(WebCore::computeShapePaddingBounds): Now calls snapVerticesToLayoutUnitGrid() before creating a FloatPolygon.
(WebCore::computeShapeMarginBounds): Ditto.

LayoutTests:

Verify that content lays out within a padded shape-inside polygon when the
document has been zoomed.

* fast/exclusions/shape-inside/shape-inside-polygon-zoom-expected.html: Added.
* fast/exclusions/shape-inside/shape-inside-polygon-zoom.html: Added.


Canonical link: https://commits.webkit.org/132756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148139 268f45cc-cd09-0410-ab3c-d52691b4dbfc