Source/WebCore/rendering/ExclusionPolygon.cpp
@@ -129,6 +129,12 @@ static inline void appendArc(Vector<FloatPoint>& vertices, const FloatPoint& arc
     vertices.append(endArcVertex);
 }
 
+static inline void snapVerticesToLayoutUnitGrid(Vector<FloatPoint>& vertices)
+{
+    for (unsigned i = 0; i < vertices.size(); ++i)
+        vertices[i].set(LayoutUnit(vertices[i].x()).toFloat(), LayoutUnit(vertices[i].y()).toFloat());
+}
+
 static inline FloatPolygon *computeShapePaddingBounds(const FloatPolygon& polygon, float padding, WindRule fillRule)
 {
     Vector<FloatPoint>* paddedVertices = new Vector<FloatPoint>();
@@ -146,6 +152,7 @@ static inline FloatPolygon *computeShapePaddingBounds(const FloatPolygon& polygo
             appendArc(*paddedVertices, thisEdge.vertex1(), padding, prevOffsetEdge.vertex2(), thisOffsetEdge.vertex1(), true);
     }
 
+    snapVerticesToLayoutUnitGrid(*paddedVertices);
     return new FloatPolygon(adoptPtr(paddedVertices), fillRule);
 }
 
@@ -166,6 +173,7 @@ static inline FloatPolygon *computeShapeMarginBounds(const FloatPolygon& polygon
             appendArc(*marginVertices, thisEdge.vertex1(), margin, prevOffsetEdge.vertex2(), thisOffsetEdge.vertex1(), false);
     }
 
+    snapVerticesToLayoutUnitGrid(*marginVertices);
     return new FloatPolygon(adoptPtr(marginVertices), fillRule);
 }
 
